--- a/app/src/main/res/layout/message_item_right_1.xml
+++ b/app/src/main/res/layout/message_item_right_1.xml
@@ -22,22 +22,18 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:background="@drawable/bubble_item_right"
-            android:paddingHorizontal="@dimen/dimen_10"
-            android:paddingVertical="@dimen/dimen_5"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
             android:gravity="center_horizontal|center_vertical"
-            >
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent">
 
 
             <TextView
                 android:id="@+id/messageText"
+                style="@style/chat_sms_text"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/message"
                 android:textColor="@color/white"
-                android:textIsSelectable="false"
-                android:textSize="@dimen/dimenSt_16"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toStartOf="@id/time"
                 app:layout_constraintStart_toStartOf="parent"
