--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -24,4 +24,8 @@
     <dimen name="dimenSt_24">24sp</dimen>
     <dimen name="dimenSt_18">18sp</dimen>
     <dimen name="dimen_80">80dp</dimen>
+    <dimen name="dimen_6">6dp</dimen>
+    <dimen name="dimenSt_20">20sp</dimen>
+    <dimen name="dimenSt_22">22sp</dimen>
+    <dimen name="dimen_14">14dp</dimen>
 </resources>
