--- a/app/src/main/res/drawable/radius_corner.xml
+++ b/app/src/main/res/drawable/radius_corner.xml
@@ -3,12 +3,12 @@
     android:shape="oval"
     >
     <stroke android:width="1dp"
-        android:color="@color/indigo_dark"
+        android:color="@color/blue"
         />
     <gradient
-        android:centerColor="@color/indigo_dark"
-        android:endColor="@color/indigo"
-        android:startColor="@color/indigo"
+        android:centerColor="@color/blue"
+        android:endColor="@color/blue"
+        android:startColor="@color/blue"
         android:type="radial"
         android:centerX="@integer/material_motion_duration_long_1"
         android:centerY="@integer/material_motion_duration_long_2"
