--- a/app/src/main/res/values/attrs.xml
+++ b/app/src/main/res/values/attrs.xml
@@ -4,4 +4,13 @@
         <attr name="icon_btnSender" format="reference"/>
         <attr name="icon_btnEmoji" format="reference"/>
     </declare-styleable>
+    <declare-styleable name="Input">
+        <attr name="icon" format="reference"/>
+        <attr name="hintInput" format="string"/>
+        <attr name="typeInput" format="enum">
+            <enum name="text" value="0"/>
+            <enum name="password" value="1"/>
+            <enum name="number" value="2"/>
+        </attr>
+    </declare-styleable>
 </resources>
