--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -33,4 +33,7 @@
     <dimen name="dimenSt_50">50sp</dimen>
     <dimen name="dimen_35">35dp</dimen>
     <dimen name="dimen_60">60dp</dimen>
+    <dimen name="dimen_180">180dp</dimen>
+    <dimen name="dimen_85">85dp</dimen>
+    <dimen name="dimen_45">45dp</dimen>
 </resources>
