--- a/app/src/main/res/layout/activity_notification.xml
+++ b/app/src/main/res/layout/activity_notification.xml
@@ -21,7 +21,7 @@
             android:id="@+id/toolbarNotification"
             android:layout_width="match_parent"
             android:layout_height="?actionBarSize"
-            android:background="@color/indigo"
+            android:background="@color/blue"
             app:contentInsetStart="@dimen/dimen_10"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
