--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,6 +9,9 @@
     <color name="white">#FFFFFF</color>
 
 
+    <color name="main_green">#2DC8C8</color>
+    <color name="second_green_darker">#2DC8C8</color>
+    <color name="trans">#00000000</color>
 
     <!--alternative choice for app's color-->
 
