--- a/app/src/main/res/layout/activity_main_2.xml
+++ b/app/src/main/res/layout/activity_main_2.xml
@@ -29,7 +29,6 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 app:layout_constraintBottom_toTopOf="@id/footer"
-                app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 />
 
@@ -45,7 +44,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="@dimen/dimen_8"
                     android:text="@string/footer_text"
-                    android:textColor="@color/blue" />
+                    android:textColor="@color/main_green" />
 
             </androidx.appcompat.widget.LinearLayoutCompat>
 
@@ -65,7 +64,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="bottom|end"
-            android:layout_margin="16dp"
+            android:layout_margin="30dp"
             android:contentDescription="@string/fab_content_desc"
             app:srcCompat="@drawable/person_add_24"
             app:tint="@color/white"
