--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -2,29 +2,29 @@
     <!-- Base application theme. -->
     <style name="Theme.Chatapp" parent="Theme.MaterialComponents.DayNight.NoActionBar">
         <!-- Primary brand color. -->
-        <item name="colorPrimary">@color/blue</item>
+        <item name="colorPrimary">@color/second_green_darker</item>
         <item name="colorPrimaryVariant">@color/light_indigo</item>
         <item name="colorOnPrimary">@color/white</item>
         <!-- Secondary brand color. -->
         <item name="colorSecondary">@color/accent</item>
-        <item name="colorSecondaryVariant">@color/blue</item>
+        <item name="colorSecondaryVariant">@color/second_green_darker</item>
         <item name="colorOnSecondary">@color/primary_text</item>
         <!-- Status bar color. -->
-        <item name="android:statusBarColor" tools:targetApi="l">@color/blue</item>
+        <item name="android:statusBarColor" tools:targetApi="l">@color/main_green</item>
         <!-- Customize your theme here. -->
     </style>
 
     <style name="Theme.Chatapp_actionBar" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
         <!-- Primary brand color. -->
-        <item name="colorPrimary">@color/blue</item>
+        <item name="colorPrimary">@color/second_green_darker</item>
         <item name="colorPrimaryVariant">@color/light_indigo</item>
         <item name="colorOnPrimary">@color/white</item>
         <!-- Secondary brand color. -->
         <item name="colorSecondary">@color/accent</item>
-        <item name="colorSecondaryVariant">@color/blue</item>
+        <item name="colorSecondaryVariant">@color/second_green_darker</item>
         <item name="colorOnSecondary">@color/primary_text</item>
         <!-- Status bar color. -->
-        <item name="android:statusBarColor" tools:targetApi="l">@color/blue</item>
+        <item name="android:statusBarColor" tools:targetApi="l">@color/second_green_darker</item>
         <!-- Customize your theme here. -->
     </style>
 
