--- a/app/src/main/res/menu/main_menu.xml
+++ b/app/src/main/res/menu/main_menu.xml
@@ -4,9 +4,15 @@
     >
 
     <item
+        android:id="@+id/search"
+        android:title="@string/search"
+        android:icon="@drawable/ic_search"
+        app:showAsAction="ifRoom"
+        />
+    <item
         android:id="@+id/notifications"
         android:title="@string/notifications"
-        android:icon="@drawable/notifications_24"
+        android:icon="@drawable/ic_notification"
         app:showAsAction="ifRoom"
         />
     <item
