--- a/app/src/main/res/layout/input.xml
+++ b/app/src/main/res/layout/input.xml
@@ -21,6 +21,7 @@
             android:id="@+id/input"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:background="@android:color/transparent"
             />
 
     </com.google.android.material.textfield.TextInputLayout>
