--- a/app/src/main/res/layout/fragment_login_2.xml
+++ b/app/src/main/res/layout/fragment_login_2.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".views.ui.login.LoginFragment">
+    tools:context=".views.ui.login.signin.LoginFragment">
 
 
     <androidx.appcompat.widget.LinearLayoutCompat
