--- a/app/src/main/res/layout/fragment_login_3.xml
+++ b/app/src/main/res/layout/fragment_login_3.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/main_green"
-    tools:context=".views.ui.login.LoginFragment">
+    tools:context=".views.ui.login.signin.LoginFragment">
 
 
     <com.google.android.material.appbar.MaterialToolbar
