--- a/app/src/main/res/layout/fragment_login_2.xml
+++ b/app/src/main/res/layout/fragment_login_2.xml
@@ -66,7 +66,7 @@
                 android:layout_height="wrap_content"
                 android:background="@drawable/radius_corner_btn"
                 android:backgroundTint="@color/blue"
-                android:text="@string/signIn"
+                android:text="@string/sign_up"
                 android:textColor="@color/white" />
 
             <androidx.appcompat.widget.AppCompatTextView
