--- a/app/src/main/res/layout/fragment_sign_in.xml
+++ b/app/src/main/res/layout/fragment_sign_in.xml
@@ -99,7 +99,7 @@
             android:layout_margin="@dimen/dimen_10"
             android:background="@drawable/radius_corner_btn"
             android:backgroundTint="@color/purple_500"
-            android:text="@string/signIn"
+            android:text="@string/sign_up"
             android:textColor="@color/white"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
