--- a/app/src/main/res/layout/fragment_sign_in_2.xml
+++ b/app/src/main/res/layout/fragment_sign_in_2.xml
@@ -35,7 +35,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginBottom="@dimen/dimen_10"
-            android:text="@string/signIn"
+            android:text="@string/sign_up"
             android:textColor="@color/blue"
             android:textSize="@dimen/dimenSt_50"
             android:textStyle="bold" />
