--- a/app/src/main/res/layout/fragment_sign_in_3.xml
+++ b/app/src/main/res/layout/fragment_sign_in_3.xml
@@ -61,7 +61,7 @@
         android:layout_marginBottom="@dimen/dimen_40"
         android:orientation="vertical"
         android:padding="@dimen/dimen_5"
-        app:layout_constraintBottom_toTopOf="@id/btnSignIn"
+        app:layout_constraintBottom_toTopOf="@id/btnSignUp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/circle3">
