--- a/app/src/main/res/layout/fragment_welcome.xml
+++ b/app/src/main/res/layout/fragment_welcome.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/main_green"
-    tools:context=".views.home.WelcomeFragment">
+    tools:context=".views.ui.login.welcome.WelcomeFragment">
 
 
     <androidx.appcompat.widget.AppCompatImageView
