--- a/app/src/main/res/menu/main_menu.xml
+++ b/app/src/main/res/menu/main_menu.xml
@@ -8,27 +8,34 @@
         android:title="@string/search"
         android:icon="@drawable/ic_search"
         app:showAsAction="ifRoom"
+        android:visible="false"
         />
     <item
         android:id="@+id/notifications"
         android:title="@string/notifications"
         android:icon="@drawable/ic_notification"
         app:showAsAction="ifRoom"
+        android:visible="false"
         />
-    <item
-        android:id="@+id/profile"
-        android:icon="@drawable/person_add_24"
-        android:title="@string/profile"
-        app:iconTint="@color/purple_700"
-        app:showAsAction="withText" />
-    <item
-        android:id="@+id/settings"
-        android:icon="@drawable/settings_24"
-        android:title="@string/settings"
-        app:iconTint="@color/purple_700"
-        app:showAsAction="withText" />
-    <item
-        android:id="@+id/logout"
-        android:title="@string/logout"
-        app:showAsAction="withText" />
+    <group
+        android:id="@+id/settingsOptions"
+        android:visible="true"
+        >
+        <item
+            android:id="@+id/profile"
+            android:icon="@drawable/person_add_24"
+            android:title="@string/profile"
+            app:iconTint="@color/purple_700"
+            app:showAsAction="withText" />
+        <item
+            android:id="@+id/settings"
+            android:icon="@drawable/settings_24"
+            android:title="@string/settings"
+            app:iconTint="@color/purple_700"
+            app:showAsAction="withText" />
+        <item
+            android:id="@+id/logout"
+            android:title="@string/logout"
+            app:showAsAction="withText" />
+    </group>
 </menu>
