--- a/app/src/main/res/layout/user_item.xml
+++ b/app/src/main/res/layout/user_item.xml
@@ -1,74 +1,68 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="wrap_content"
+    app:cardBackgroundColor="@color/white"
+    app:contentPadding="@dimen/dimen_12">
 
-    <androidx.cardview.widget.CardView
-        android:id="@+id/card"
+    <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:cardBackgroundColor="@color/white"
-        app:contentPadding="@dimen/dimen_12">
+        >
 
-        <RelativeLayout
-            android:layout_width="match_parent"
+        <androidx.cardview.widget.CardView
+            android:id="@+id/circularImg"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            >
+            android:layout_centerVertical="true"
+            app:cardCornerRadius="@dimen/dimen_150">
 
-            <androidx.cardview.widget.CardView
-                android:id="@+id/circularImg"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_centerVertical="true"
-                app:cardCornerRadius="@dimen/dimen_150">
+            <ImageView
+                android:id="@+id/userImage"
+                android:layout_width="@dimen/dimen_50"
+                android:layout_height="@dimen/dimen_50"
+                android:padding="@dimen/dimen_5"
+                android:src="@drawable/ic_person_24"
+                android:contentDescription="@string/imageDesc" />
+        </androidx.cardview.widget.CardView>
 
-                <ImageView
-                    android:id="@+id/userImage"
-                    android:layout_width="@dimen/dimen_50"
-                    android:layout_height="@dimen/dimen_50"
-                    android:padding="@dimen/dimen_5"
-                    android:src="@drawable/ic_person_24"
-                    android:contentDescription="@string/imageDesc" />
-            </androidx.cardview.widget.CardView>
+        <TextView
+            android:id="@+id/userName"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="@dimen/dimen_15"
+            android:layout_marginTop="@dimen/dimenSt_15"
+            android:layout_toEndOf="@id/circularImg"
+            android:text="@string/name"
+            android:textColor="@color/black_200"
+            android:textSize="@dimen/dimenSt_16"
+            android:textStyle="bold" />
 
-            <TextView
-                android:id="@+id/userName"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="@dimen/dimen_15"
-                android:layout_marginTop="@dimen/dimenSt_15"
-                android:layout_toEndOf="@id/circularImg"
-                android:text="@string/name"
-                android:textColor="@color/black_200"
-                android:textSize="@dimen/dimenSt_16"
-                android:textStyle="bold" />
+        <TextView
+            android:id="@+id/lastMessage"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/userName"
+            android:layout_marginStart="@dimen/dimen_15"
+            android:layout_marginTop="@dimen/dimen_3"
+            android:layout_toEndOf="@id/circularImg"
+            android:lines="1"
+            android:text="@string/name"
+            android:textColor="@color/black_200"
+            android:textSize="@dimen/dimenSt_14" />
 
-            <TextView
-                android:id="@+id/lastMessage"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_below="@+id/userName"
-                android:layout_marginStart="@dimen/dimen_15"
-                android:layout_marginTop="@dimen/dimen_3"
-                android:layout_toEndOf="@id/circularImg"
-                android:lines="1"
-                android:text="@string/name"
-                android:textColor="@color/black_200"
-                android:textSize="@dimen/dimenSt_14" />
-
-            <TextView
-                android:id="@+id/time"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignBaseline="@id/lastMessage"
-                android:layout_alignParentEnd="true"
-                android:layout_marginStart="@dimen/dimen_15"
-                android:layout_marginTop="@dimen/dimen_3"
-                android:lines="1"
-                android:text="@string/name"
-                android:textColor="@color/black_200"
-                android:textSize="@dimen/dimenSt_14" />
-        </RelativeLayout>
-    </androidx.cardview.widget.CardView>
-</RelativeLayout>
+        <TextView
+            android:id="@+id/time"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignBaseline="@id/lastMessage"
+            android:layout_alignParentEnd="true"
+            android:layout_marginStart="@dimen/dimen_15"
+            android:layout_marginTop="@dimen/dimen_3"
+            android:lines="1"
+            android:text="@string/name"
+            android:textColor="@color/black_200"
+            android:textSize="@dimen/dimenSt_14" />
+    </RelativeLayout>
+</androidx.cardview.widget.CardView>
