--- a/app/src/main/res/layout/activity_main_2.xml
+++ b/app/src/main/res/layout/activity_main_2.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".views.home.HomeActivity">
+    tools:context=".views.main.HomeActivity">
 
     <androidx.appcompat.widget.LinearLayoutCompat
         android:id="@+id/toolbar"
