--- a/app/src/main/res/layout/activity_main_2.xml
+++ b/app/src/main/res/layout/activity_main_2.xml
@@ -35,6 +35,7 @@
         >
 
         <androidx.appcompat.widget.LinearLayoutCompat
+            android:id="@+id/browserContainer"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:orientation="vertical"
